--- a/index.html
+++ b/index.html
@@ -3,6 +3,43 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Crypto Prediction</title>
+  <link rel="stylesheet" href="styles.css"> <!-- Linking the CSS file -->
+</head>
+
+<body>
+  <div id="app">
+    <header>
+      <h1>Crypto Prediction</h1>
+    </header>
+    <main>
+      <p id="disclaimer">This app provides crypto price predictions based on historical data. Predictions are for informational purposes only. Always do your own research!</p>
+      <div class="crypto-selection">
+        <label for="crypto-type">Select Crypto:</label>
+        <select id="crypto-type">
+          <option value="bitcoin">Bitcoin (BTC)</option>
+          <option value="ethereum">Ethereum (ETH)</option>
+          <option value="cardano">Cardano (ADA)</option>
+        </select>
+      </div>
+      <button onclick="getPrediction()">Get Prediction</button>
+      <div id="prediction-result"></div>
+      <div id="crypto-price"></div>
+    </main>
+  </div>
+
+  <script src="script.js"></script> <!-- Linking the JavaScript file -->
+</body>
+
+</html>
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WalletScan</title>
   <link rel="stylesheet" href="styles.css">
 </head>
